; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_r600.c_r600_gfx_is_lockup.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_r600.c_r600_gfx_is_lockup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { i32 }
%struct.radeon_ring = type { i32 }

@RADEON_RESET_GFX = common dso_local global i32 0, align 4
@RADEON_RESET_COMPUTE = common dso_local global i32 0, align 4
@RADEON_RESET_CP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @r600_gfx_is_lockup(%struct.radeon_device* %0, %struct.radeon_ring* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.radeon_device*, align 8
  %5 = alloca %struct.radeon_ring*, align 8
  %6 = alloca i32, align 4
  store %struct.radeon_device* %0, %struct.radeon_device** %4, align 8
  store %struct.radeon_ring* %1, %struct.radeon_ring** %5, align 8
  %7 = load %struct.radeon_device*, %struct.radeon_device** %4, align 8
  %8 = call i32 @r600_gpu_check_soft_reset(%struct.radeon_device* %7)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* @RADEON_RESET_GFX, align 4
  %11 = load i32, i32* @RADEON_RESET_COMPUTE, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @RADEON_RESET_CP, align 4
  %14 = or i32 %12, %13
  %15 = and i32 %9, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %20, label %17

17:                                               ; preds = %2
  %18 = load %struct.radeon_ring*, %struct.radeon_ring** %5, align 8
  %19 = call i32 @radeon_ring_lockup_update(%struct.radeon_ring* %18)
  store i32 0, i32* %3, align 4
  br label %27

20:                                               ; preds = %2
  %21 = load %struct.radeon_device*, %struct.radeon_device** %4, align 8
  %22 = load %struct.radeon_ring*, %struct.radeon_ring** %5, align 8
  %23 = call i32 @radeon_ring_force_activity(%struct.radeon_device* %21, %struct.radeon_ring* %22)
  %24 = load %struct.radeon_device*, %struct.radeon_device** %4, align 8
  %25 = load %struct.radeon_ring*, %struct.radeon_ring** %5, align 8
  %26 = call i32 @radeon_ring_test_lockup(%struct.radeon_device* %24, %struct.radeon_ring* %25)
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %20, %17
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @r600_gpu_check_soft_reset(%struct.radeon_device*) #1

declare dso_local i32 @radeon_ring_lockup_update(%struct.radeon_ring*) #1

declare dso_local i32 @radeon_ring_force_activity(%struct.radeon_device*, %struct.radeon_ring*) #1

declare dso_local i32 @radeon_ring_test_lockup(%struct.radeon_device*, %struct.radeon_ring*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
